2010-02-11  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h: disable EVENT_ARG_REUSE for now.

	* deployment.cpp (Dispose): fix ifdef.

2010-02-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* deployment.cpp: Fix variable nam.

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* resources.cpp: We need to look up merged dictionarys in
	  reverse order. Fixes a lot of minor visual breakages.

2010-02-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Add a temporary hack disabling the Buffering state
	when using MediaStreamSource - we're not supposed to go into Buffering
	by ourselves in this case, we should only go into Buffering when
	MediaStreamSource.ReportGetSampleProgress is called. Fixes an issue
	with nbcolympics.com where the initial loading screen didn't go away.

2010-02-10  Chris Toshok  <toshok@ximian.com>

	* uielement.cpp (UIElement::GrowBoundsByEffectPadding): don't use
	the effect if effects=no.  All the code basically checks to see if
	GetEffect() returns NULL, so set effect to NULL if the flag is
	present.
	(UIElement::Invalidate): same.
	(UseBackToFront): same.
	(PostRender): same.

2010-02-10  Chris Toshok  <toshok@ximian.com>

	* deployment.cpp (Dispose): unref the change args here instead of
	in the dtor.

	* collection.cpp (~Collection): free our cached event args.

2010-02-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp|h: Add a pinvokable g_free wrapper.

2010-02-10  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.h: add EVENT_ARG_REUSE #define, commented out
	for now.

	* dependencyobject.cpp: for all PropertyChangedEventArgs creation,
	use Deployment::Get/ReleasePropertyChangedEventArgs.

	* deployment.h,cpp: add
	GetPropertyChangedEventArgs/ReleasePropertyChangedEventArgs, so we
	can keep a pool of them around and reuse as we need them.

	* collection.h,cpp: keep a CollectionChangedEventArgs and a
	CollectionItemChangedEventArgs around per collection and reuse